# md_knowledge_graph_mcp

./: README.md  __init__.py  create_entity.py  flake.nix  kg_core.py  main.py  pyproject.toml  server.py
examples/: mcp_server_guide.md  sample_kg_entry.md  system_prompt.md
kg_markdown_data/: Colonial Williamsburg.md  Interactive Art Creation.md  Kimberly McCarty.md  Lily.md  Plady.md  Robo-Artist.md  Robo-Food Court.md  Robo-Masterchef.md  Robo-Realm Theme Park.md  Safety Zone.md  Social Companion Robots.md
tests/: __init__.py  test_kg_core.py  test_kg_json_behavior.py  test_server_tools.py
